# amiga-pac-man

./: .gitignore  .gitignore.swp  CMakeLists.txt  vbcc.yaml
coindrop/: coindrop.c  coindrop.h
intermission/: intermission.c  intermission.h
intromusic/: intromusic.c
sound-work/: wsg-slice.c
sound_system/: credit.h  intromusic.h  sound_manager.c  sound_manager.h  sound_system.c
test-harnesses/: Colors.h  HeaderHack.h  MazeBorders.h  MazeBorders2.h  font.h
test-harnesses/DrawStage/: DrawStage.c
test-harnesses/GELVSprite/: GELVSprite.c
test-harnesses/GelBOB/: GELBOB.c
test-harnesses/PacAndMaze/: PacAndMaze.c
test-harnesses/Pellets/: Pellets.c
test-harnesses/Planes/: Planes.c
test-harnesses/PowerPelletTask/: PowerPelletTask.c  powerpellettask.c
test-harnesses/ScoreTask/: ScoreTask.c
test-harnesses/ScreenTask/: screenTask.c
test-harnesses/SpritePac/: SpritePac.c
test-harnesses/SpritesAndBob/: SpritesAndBOB.c
test-harnesses/WSG/: WSG.c
test-harnesses/WSG2/: WSG2.c  waveforms.h
test-harnesses/WSG3/: WSG3.c
